Using consul to figure out vault details before unsealing. Added hello java program to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,6 @@ services:
       - /home/vagrant/vault/vault_data:/root/vault/vault_data
       - /home/vagrant/vault/vault.conf:/root/vault/vault.conf
     command: server -config=/root/vault/vault.conf
+  
+  javahelloworld:
+    image: mrcontainer/javahelloworld
