Moved java app inside docker folder. Using docker compose to build that image and then it along with other images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,4 +68,5 @@ services:
     command: server -config=/root/vault/vault.conf
   
   javahelloworld:
+    build: ./Application/.
     image: mrcontainer/javahelloworld
