--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - 8400:8400
       - 8500:8500
       - 53:53/udp
+    volumes: 
+      - /home/vagrant/docker/consul/data:/data
     hostname: consulserver
     container_name: consulserver
     image: progrium/consul
@@ -63,7 +65,7 @@ services:
     ports:
       - 127.0.0.1:8200:8200
     volumes:
-      - /home/vagrant/docker/vault/vault_data:/root/vault/vault_data
+      - /home/vagrant/docker/vault/data:/root/vault/vault_data
       - /home/vagrant/docker/vault/configuration/vault.conf:/root/vault/vault.conf
     command: server -config=/root/vault/vault.conf
   
